# jorgecastillocarrero

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .railwayignore  0_cap_results.py  0_cap_subsector.py  0_capitulacion.py  0_paso1_regimenes.py  0_paso2_subsectores.py  3dh_detail.py  3dh_optimize.py  3dh_signal_today.py  3dh_trades_yearly.py  3dh_verify_overlap.py  ARCHITECTURE.md  CLAUDE.md  CUsersusuarioAppDataLocalTempclaudeC--Users-usuario-financial-data-project60f0e3f1-191b-44cd-81a9-271ab1cba7c6scratchpadapp_old.py  DEPLOYMENT.md  Dockerfile  Financial_Data_Project_Documentation.docx  PLAN_ENTERPRISE_V2.md  PatrimonioSmart_Investor_Presentation.docx  README.md  SISTEMA_FAIR_V3.md  acciones_navegable.py  analisis_transiciones.html  analisis_transiciones.py  analyze_bearish_meanrev.py  analyze_bullish_split.py  analyze_neutral.py  analyze_regime_indicators.py  analyze_regimes.py  auto_backup.ps1  backtest_10_acciones.py  backtest_combinada.html  backtest_combinada.py  backtest_comparativa.py  backtest_comparativa_regimenes.html  (+216 more)
.streamlit/: config.toml
analisis_diario/: dia_31_12.py  revisar_dia.py  tabla_completa.py
docs/: FEATURES_REQUIREMENTS.md  INFRASTRUCTURE.md  MACRO_ARCHITECTURE.md
scripts/: README.md  actualizar_tipos_cambio.py  analyze_r4_transfers.py  backtest_compare.py  backtest_compare_stats.py  backtest_corrected.py  backtest_formula_complete.py  backtest_formula_test.py  backtest_full_comparison.py  backtest_min_drawdown_stats.py  backtest_optimize_return.py  backtest_optimized.py  backtest_week.py  (+68 more)
(+90 files in other folders)
